--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>Welcome to Kenneth McIntire's website</h1>
     <script src="index.js"></script>
   </body>
 </html>
